The calls to RES_SET_H_ERRNO() macro on error paths wind up dereferencing an uninitialized res.

PR:		202142
Submitted by:	Sean Boudreau
MFC after:	1 week

Former-commit-id: 4a62bc082b0ee4d495d2a01c76f9d39439ac4ed3